[package]
name = "venman"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28.1"
colored = "2.0"
toml = "0.8.8"
shellexpand = "2.1.0"
dirs = "4.0"
